--- a/Micro/HW6/HW6.tex
+++ b/Micro/HW6/HW6.tex
@@ -103,6 +103,16 @@
       \end{cases}
     \end{gather*}
     Find all pure Nash equilibria of the normal form game $G$ in which $\theta_1=\theta_2=2$ 
+  \subsection*{Solution}
+    Case 1:
+    \begin{gather*}
+      \frac{\partial u}{\partial x_i} = 2 + 3x_j - 8x_i = 0 \rightarrow x_i = \frac{2+3x_j}{8} \\
+      0 \leq \frac{2+3x_j}{8} \leq 1 \rightarrow -\frac{2}{3} \leq x_j \leq 2\\
+    \end{gather*}
+    By symmetry, given both maximize and have complete info, $x_i=x_j=\frac{2}{5}$
+
+    Case 2:
+    Both players would maximize, choosing $x_i=x_j=1$. This is due to the fact that they will choose the highest possible value from the interval available to them.
 \section*{Problem 2. Sandholm PS3 \# 4}
   (i) Find all subgame perfect equilibria of the game in Figure 1 below.
   (ii) Determine the reduced normal form of this game. 
@@ -163,15 +173,15 @@
           & 1 & 2 & 3 & 4 & 5 & 6 \\
           \hline
           1 & A1 & A1 & A1 & A1 & A1 & A1 \\
-          2 & A2 & A2 & A2 & A1 & A1 & A1 \\
-          3 & A3 & A3 & A3 & A1 & A1 & A1 \\
+          2 & A1 & A1 & A1 & A1 & A1 & A1 \\
+          3 & A1 & A1 & A1 & A1 & A1 & A1 \\
           4 & A0 & A0 & A0 & A1 & A1 & A1 \\
-          5 & A0 & A0 & A0 & A2 & A2 & A2 \\
-          6 & A0 & A0 & A0 & A3 & A3 & A3 \\
+          5 & A0 & A0 & A0 & A0 & A1 & A1 \\
+          6 & A0 & A0 & A0 & A0 & A1 & A2 \\
           \hline
         \end{tabular}
       \end{center}
-    The game exhibits first mover advantage. Thus the optimal path is to move as quickly as possible for both players. Player 1 will move 3, with player 2 choosing not to move since they are unable to win. Thus, player 1 will then only move in single step increments, minimizing cost. This leads to player 1 spending 21 and player 2 spending 0. 
+    The game exhibits first mover advantage. Thus the optimal path is to move as quickly as possible for both players. Player 1 will move 2, with player 2 choosing not to move since they are unable to win. Thus, player 1 will then only move in single step increments, minimizing cost. This leads to player 1 spending 15 and player 2 spending 0. 
   \subsubsection*{(ii)}
     In the absence of competition, the need to move 3 at the start is eliminated, thus the player will move 1 step at a time, minimizing cost.
   \begin{center}
@@ -182,19 +192,17 @@
   \subsection*{Solution}
     The sequential equilibrium when $z=3$ is 
     \begin{gather*}
-      \EE(L) = 4, \EE(R) = 5\\
-      4L = 5R \rightarrow L = \frac{5}{4}R \rightarrow \frac{9}{4}R = 1 \Rightarrow R = \frac{4}{9} \ \therefore \ L = \frac{5}{9} \\
-      (A, d, \frac{5}{9}L + \frac{4}{9}R)
+      (A, \frac{1}{3}a + \frac{2}{3}d, \frac{1}{3}L + \frac{2}{3}R).
     \end{gather*}
+    I am still working to learn the notation, so I will use words. When solving for player 3's best response, it is found that playing L one-third of the time and R two-thirds is optimal for them. Then, when using that information for player 2, it sis found that they will receive a higher payoff when playing d than a given the strategy for player 3. Finally, player 1 is best off playing A in all cases since it gives them a higher payoff than if they were to play D.  
 \section*{Problem 5. Sandholm PS4 \# 2}
   Compute all sequential equilibria of the game in Figure 3 when $z=2$.
   \subsection*{Solution}
     The sequential equilibrium when $z=2$ is 
     \begin{gather*}
-      \EE(L) = 3, \EE(R) = 4 \\
-      3L = 4R \rightarrow L = \frac{4}{3}R \rightarrow \frac{7}{3}R = 1 \Rightarrow R = \frac{3}{7} \ \therefore \ L = \frac{4}{7} \\
-      (A, d, \frac{4}{7}L + \frac{3}{7}R)
+      (A,a,R)
     \end{gather*}
+    When z=2, Players 1 and 2 will play to get the guaranteed payoff, rather than leaving to player 3 who will play R every time given the available moves.
 \section*{Problem 6. Sandholm PS4 \# 3}
   For the game in Figure 4 below, specify an assessment (i.e., a strategy profile and a belief profile) with these three properties: (i) beliefs are Bayesian; (ii) no player has a profitable one-shot deviation at any information set; (iii) the assessment is not a weak sequential equilibrium.
   \begin{center}
